--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react-dom": "^19",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
     "@eslint/eslintrc": "^3"
