--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -46,6 +47,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next": "15.5.6",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "19.1.0",
     "react-day-picker": "^8.10.1",
